# pslab-firmware

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  FirmwareFlowChart.drawio  PSLabFirmwareFlowChart  README.md  flash.mdbscript  main.c  pslab-cc.mc3  pslab-cc.mc3.bak  travis-install-dependencies.sh
bootloader/: CMakeLists.txt  README.md  combine_hex.sh  flash.mdbscript
bootloader/src/: CMakeLists.txt  delay.c  delay.h  main.c  rgb_led.c  rgb_led.h
bootloader/src/mcc_generated_files/: clock.c  clock.h  interrupt_manager.c  interrupt_manager.h  mcc.c  mcc.h  pin_manager.c  pin_manager.h  reset.c  reset.h  reset_types.h  system.c  system.h  system_types.h  traps.c  traps.h  uart1.c  uart1.h  watchdog.h
pslab-bootloader.X/: CMakeLists.txt  README.md  main.c  pslab-bootloader.mc3  rgb_led.c  rgb_led.h
pslab-bootloader.X/mcc_generated_files/: clock.c  clock.h  interrupt_manager.c  mcc.h  mcc.h.dump  pin_manager.c  pin_manager.h  reset.c  reset.h  reset_types.h  system.c  system.c.dump  system.h  system_types.h  traps.h  traps.h.dump  uart1.c  uart1.h  uart1.h.dump  watchdog.h
pslab-bootloader.X/mcc_generated_files/boot/: boot_config.h  boot_demo.c  boot_demo.c.dump  boot_demo.h  boot_private.h  boot_process.c  boot_process.c.dump  boot_process.h  boot_verify_not_blank.c  boot_verify_not_blank.c.dump  com_adaptor.h  com_adaptor.h.dump  com_adaptor_uart.c  com_adaptor_uart.c.dump  contract.json  hardware_interrupt_table.S  memory_partition.S
pslab-bootloader.X/mcc_generated_files/memory/: flash.h  flash.h.dump  flash.s
pslab-bootloader.X/nbproject/: configurations.xml  project.xml
pslab-core.X/: CMakeLists.txt  README.md  commands.c  commands.h  delay.c  main.c  psl-adc.c  psl-adc.h  pslab-core.mc3  pslab-core.mc3.bak  states.c  states.h  version.c  version.h
pslab-core.X/boot/: boot_config.h  combineAppAndBootloaderHex.sh  hardware_interrupt_table.S  interrupts.S  memory_partition.S  remapped_reset.S  user_interrupt_table.S
pslab-core.X/bus/: uart1.c  uart1.h
pslab-core.X/bus/i2c/: CMakeLists.txt  i2c.c  i2c.h  i2c1.c  i2c1.h
pslab-core.X/bus/spi/: spi1_driver.c  spi1_driver.h  spi1_types.h  spi_driver.c  spi_driver.h  spi_master.c  spi_master.h
pslab-core.X/bus/uart/: CMakeLists.txt  uart1.c  uart1.h  uart2.c  uart2.h
pslab-core.X/helpers/: CMakeLists.txt  buffer.c  buffer.h  device.c  device.h  interval.c  interval.h  light.c  light.h  rtc.c  rtc.h  version.c  version.h
pslab-core.X/instruments/: logicanalyzer.c  logicanalyzer.h  multimeter.c  multimeter.h  oscilloscope.c  oscilloscope.h  powersource.c  powersource.h  sensors.c  sensors.h  wavegenerator.c  wavegenerator.h
pslab-core.X/mcc_generated_files/: adc1.c  adc1.h  adc_module_features.h  clock.c  clock.h  cmp1.c  cmp1.h  cmp2.c  cmp2.h  cmp3.c  cmp3.h  cmp4.c  cmp4.h  cvr.c  cvr.h  dma.c  dma.h  ext_int.c  ext_int.h  i2c1.c  i2c1.h  ic1.c  ic4.c  ic4.h  interrupt_manager.c  interrupt_manager.h  mcc.c  mcc.h  oc1.c  oc1.h  oc2.c  oc2.h  oc3.c  oc3.h  oc4.c  oc4.h  pin_manager.c  pin_manager.h  spi1_driver.c  spi1_driver.h  (+17 more)
pslab-core.X/mcc_generated_files/boot/: hardware_interrupt_table.S  interrupts.S  memory_partition.S  remapped_reset.S  user_interrupt_table.S
pslab-core.X/mcc_generated_files/docs/: spi.dox  spi_basic.dox
pslab-core.X/mcc_generated_files/drivers/: spi_master.c  spi_master.h
pslab-core.X/mcc_generated_files/fatfs/: diskio.c  diskio.h  fatfs_demo.c  ff.c  ff_time.c  ffconf.h  ffunicode.c  integer.h
pslab-core.X/mcc_generated_files/sd_spi/: sd_spi.c  sd_spi.h
pslab-core.X/nbproject/: configurations.xml  project.xml
pslab-core.X/protocols/: uart1.c  uart1.h
pslab-core.X/registers/: CMakeLists.txt
pslab-core.X/registers/comparators/: cmp1.c  cmp1.h  cmp2.c  cmp2.h  cmp3.c  cmp3.h  cmp4.c  cmp4.h  cmp_params.h  cvr.c  cvr.h  ic1.c  ic1.h  ic2.c  ic2.h  ic3.c  ic3.h  ic4.c  ic4.h  ic_params.c  ic_params.h  oc1.c  oc1.h  oc2.c  oc2.h  oc3.c  oc3.h  oc4.c  oc4.h
pslab-core.X/registers/converters/: adc1.c  adc1.h  adc_module_features.h  ctmu.c  ctmu.h
pslab-core.X/registers/memory/: dma.c  dma.h
pslab-core.X/registers/system/: clock.c  clock.h  interrupt_manager.c  interrupt_manager.h  pin_manager.c  pin_manager.h  system.c  system.h  watchdog.h
pslab-core.X/registers/timers/: tmr1.c  tmr1.h  tmr2.c  tmr2.h  tmr3.c  tmr3.h  tmr4.c  tmr4.h  tmr5.c  tmr5.h
pslab-core.X/sdcard/: sd_spi.c
pslab-core.X/sdcard/fatfs/: 00history.txt  LICENSE.txt  diskio.c  (+4 more)
src/: CMakeLists.txt  commands.c  commands.h  main.c  states.c  states.h  types.h
src/boot/: CMakeLists.txt  boot_config.h  hardware_interrupt_table.S  remapped_reset.S
src/bus/: CMakeLists.txt
src/helpers/: CMakeLists.txt  blink.c  blink.h  buffer.c  buffer.h  debug.c  debug.h  delay.c  delay.h  device.c  device.h  interval.c  interval.h  light.c  light.h  rtc.c  rtc.h
src/instruments/: CMakeLists.txt  logic_analyzer.c  logic_analyzer.h  logicanalyzer.c  logicanalyzer.h  multimeter.c  multimeter.h  oscilloscope.c  oscilloscope.h  powersource.c  powersource.h  sensors.c  sensors.h  wavegenerator.c  wavegenerator.h
src/registers/: CMakeLists.txt
src/registers_ng/: CMakeLists.txt  cn.c  cn.h  dma.c  dma.h  hardware.h  ic.c  ic.h  pins.c  pins.h  tmr.c  tmr.h
src/sdcard/: CMakeLists.txt  sd_spi.c  sd_spi.h  sdcard.c  sdcard.h
src/transport/: CMakeLists.txt  host.c  host.h  packet_handler.c  packet_handler.h  uart2.c  uart2.h
(+316 files in other folders)
